[gd_scene load_steps=44 format=2]

[ext_resource path="res://assets/Characters/spaceship-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://assets/Montserrat-ExtraBold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://HUD.gd" type="Script" id=4]
[ext_resource path="res://assets/sfx/PLAYER/Retro Explosion Short 15.wav" type="AudioStream" id=6]
[ext_resource path="res://Area2D.gd" type="Script" id=7]
[ext_resource path="res://assets/sfx/PLAYER/SFX_BREATH_INT_SUIT_PILOT(L).wav" type="AudioStream" id=8]
[ext_resource path="res://assets/Characters/big_sircle.png" type="Texture" id=9]
[ext_resource path="res://assets/Characters/small_circle.png" type="Texture" id=10]
[ext_resource path="res://assets/Characters/boost-Sheet.png" type="Texture" id=11]

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 1 )
region = Rect2( 384, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 1 )
region = Rect2( 288, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 1 )
region = Rect2( 352, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 1 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 29 ) ],
"loop": true,
"name": "fly_down",
"speed": 5.0
}, {
"frames": [ SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ) ],
"loop": true,
"name": "fly_side",
"speed": 5.0
}, {
"frames": [ SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ) ],
"loop": false,
"name": "fly_up",
"speed": 5.0
}, {
"frames": [ SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="Animation" id=14]
length = 0.001

[sub_resource type="Animation" id=42]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "fly_down" ]
}

[sub_resource type="Animation" id=43]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "fly_side" ]
}

[sub_resource type="Animation" id=44]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "fly_up" ]
}

[sub_resource type="Animation" id=45]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle" ]
}

[sub_resource type="CapsuleShape2D" id=10]
radius = 6.0
height = 12.0

[sub_resource type="DynamicFont" id=12]
size = 35
font_data = ExtResource( 3 )

[sub_resource type="CapsuleShape2D" id=11]
radius = 6.0
height = 16.0

[sub_resource type="CircleShape2D" id=19]
radius = 14.0357

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 11 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 11 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 11 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 11 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=28]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": true,
"name": "power_up",
"speed": 5.0
}, {
"frames": [ SubResource( 27 ) ],
"loop": true,
"name": "shock_em",
"speed": 5.0
} ]

[sub_resource type="Animation" id=46]
length = 0.001
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BoostAnimationSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BoostAnimationSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "default" ]
}

[sub_resource type="Animation" id=47]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BoostAnimationSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BoostAnimationSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "power_up" ]
}

[sub_resource type="Animation" id=48]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BoostAnimationSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BoostAnimationSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "shock_em" ]
}

[sub_resource type="RectangleShape2D" id=49]
extents = Vector2( 10, 16 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 9
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 9 )
animation = "idle"
frame = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/RESET = SubResource( 14 )
anims/fly_down = SubResource( 42 )
anims/fly_side = SubResource( 43 )
anims/fly_up = SubResource( 44 )
anims/idle = SubResource( 45 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 10 )

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource( 4 )

[node name="Control" type="Control" parent="HUD"]
margin_right = 40.0
margin_bottom = 40.0

[node name="ScoreText" type="Label" parent="HUD/Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 98.0
margin_top = 24.0
margin_right = 138.0
margin_bottom = 67.0
custom_fonts/font = SubResource( 12 )
text = "0"
align = 1
valign = 1

[node name="ScoreTimer" type="Timer" parent="HUD"]
wait_time = 1.5
autostart = true

[node name="Trigger" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trigger"]
position = Vector2( 0, -1 )
shape = SubResource( 11 )

[node name="Breath" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -40.0
autoplay = true

[node name="Explosion" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -15.0

[node name="MobileButtons" type="CanvasLayer" parent="."]

[node name="Area2D" type="Area2D" parent="MobileButtons"]
modulate = Color( 1, 1, 1, 0.105882 )
position = Vector2( 140, 388 )
scale = Vector2( 5.88, 5.88 )
collision_layer = 0
collision_mask = 0
script = ExtResource( 7 )

[node name="BigCircle" type="Sprite" parent="MobileButtons/Area2D"]
texture = ExtResource( 9 )

[node name="SmallCircle" type="Sprite" parent="MobileButtons/Area2D/BigCircle"]
scale = Vector2( 0.625, 0.625 )
texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MobileButtons/Area2D"]
shape = SubResource( 19 )

[node name="BoostAnimationSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 28 )
animation = "shock_em"

[node name="BustAnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "default"
anims/default = SubResource( 46 )
anims/power_up = SubResource( 47 )
anims/shock_em = SubResource( 48 )

[node name="BonusTrigger" type="Area2D" parent="."]
visible = false
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="BonusTrigger"]
visible = false
shape = SubResource( 49 )

[connection signal="timeout" from="HUD/ScoreTimer" to="HUD" method="_on_ScoreTimer_timeout"]
[connection signal="body_entered" from="Trigger" to="." method="_on_Trigger_body_entered"]
